--- a/depth01/myDiary_detail.css
+++ b/depth01/myDiary_detail.css
@@ -108,7 +108,7 @@
     font-weight: 600;
 }
 
-.title__btn {
+.title__button {
     display: flex;
     gap: 16px;
 }
@@ -132,16 +132,16 @@
     border: 2px solid #FFBE98;
 }
 
-.btn__edit:hover {
-    background-color: #FFBE98;
+.btn__delete:hover {
+    background-color: #767676;
     color: #fff;
     border: 2px solid #FCFCFC;
     font-weight: 600;
     transition: 0.2s;
 }
 
-.btn__delete:hover {
-    background-color: #767676;
+.btn__edit:hover {
+    background-color: #FFBE98;
     color: #fff;
     border: 2px solid #FCFCFC;
     font-weight: 600;
@@ -158,6 +158,79 @@
     margin-bottom: 32px;
 }
 
+.container__edit {
+    width: 1148px;
+}
+
+.edit__question {
+    font-size: 24px;
+    margin-bottom: 16px;
+}
+
+.edit__radio {
+    height: 30px;
+    display: flex;
+    gap: 20px;
+    margin-bottom: 24px;
+}
+
+label {
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.title__text2, .content__text2 {
+    font-size: 24px;
+    margin-bottom: 8px;
+}
+
+.title__input, .content__input {
+    width: 100%;
+    height: 48px;
+    border-radius: 8px;
+    border: 1px solid #ddd;
+    padding: 12px 16px;
+    margin-bottom: 24px;
+}
+
+.edit__button {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+}
+
+.btn__cancel, .btn__submit {
+    width: 116px;
+    height: 48px;
+    border: 2px solid #ddd;
+    border-radius: 8px;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn__cancel:hover {
+    background-color: #767676;
+    color: #fff;
+    border: 2px solid #FCFCFC;
+    font-weight: 600;
+    transition: 0.2s;
+}
+
+.btn__submit:hover {
+    background-color: #FFBE98;
+    color: #fff;
+    border: 2px solid #FCFCFC;
+    font-weight: 600;
+    transition: 0.2s;
+}
+
+
+.content__input {
+    height: 128px;
+}
+
 .container__comment {
     width: 1148px;
 }
@@ -172,6 +245,7 @@
 .comment__input {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 16px;
 }
 
 .input__text {
@@ -183,8 +257,8 @@
     font-size: 20px;
 }
 
-.input__btn {
-    width: 100px;
+.btn__input {
+    width: 116px;
     height: 48px;
     background-color: #fcfcfc;
     color: #222;
@@ -195,10 +269,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 40px;
 }
 
-.input__btn:hover {
+.btn__input:hover {
     background-color: #222;
     color: #fff;
     border: none;
@@ -208,10 +281,15 @@
 
 .comment__list {
     width: 1148px;
-    height: 40px;
+    height: 100%;
+}
+
+.list__section {
+    height: 60px;
+    border-bottom: 2px solid #ddd;
     display: flex;
     justify-content: space-between;
-    border-bottom: 2px solid #ddd;
+    align-items: center;
 }
 
 .list__text {
@@ -219,6 +297,6 @@
 }
 
 .list__date {
-    font-size: 18px;
+    font-size: 16px;
     color: #bbb;
 }
