--- a/CSS&JS 마스터/수정.css
+++ b/CSS&JS 마스터/수정.css
@@ -5,20 +5,24 @@
 }
 
 body {
-    width: 1920px;
-    height: 1605px;
-    gap: 24px;
-    margin-top: 100px;
-    padding-left: 376px;
-    padding-right: 376px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.layout {
+    width: 1168px;
+    margin: 0 20px 40px;
 }
 
 header {
     width: 100%;
     height: 60px;
-    gap: 10px
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 16px;
+    padding: 20px 0px;
 }
 
 .header_text {
@@ -38,14 +42,6 @@ main {
     border-bottom: 1px;
     padding-bottom: 16px;
     gap: 24px;
-    display: flex;
-    flex-direction: column;
-}
-
-header {
-    width: 100%;
-    height: 64px;
-    gap: 16px;
     display: flex;
     flex-direction: column;
 }
@@ -95,6 +91,7 @@ header {
     letter-spacing: -1px;
     color: #333333;
     display: block;
+    line-height: 24px;
 }
 
 .main_body_title {
@@ -202,4 +199,65 @@ header {
 
 .main_button button:active {
     transform: rotateZ(30deg);
+}
+
+.remembranceBox{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.inputBox {
+    width: 100%;
+    gap: 13px;
+    display: flex;
+    flex-direction: column;
+}
+
+.inputTitle {
+    width: 100%;
+    height: 24px;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: -1px;
+}
+
+.inputTextBox {
+    width: 100%;
+    display: flex;
+    gap: 16px;
+}
+
+#inputText {
+    width: 100%;
+    height: 48px;
+    border-radius: 8px;
+    border: 1px solid #d4d3d3;
+    padding: 12px 16px;
+}
+
+.inputButton {
+    width: 52px;
+    height: 48px;
+    border-radius: 8px;
+    line-height: 48px;
+    background-color: #000000;
+    color: white;
+    text-align: center;
+    cursor: pointer;
+}
+
+#remembranceTextBox {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.remembranceText {
+    width: 100%;
+    border-bottom: 1px solid #e4e4e4;
+    padding-bottom: 10px;
 }
