--- a/css-js/homework/diary-savor/diary-detail/diary-detail.css
+++ b/css-js/homework/diary-savor/diary-detail/diary-detail.css
@@ -9,186 +9,279 @@
 }
 
 body {
-  min-width: 760px;
-  max-width: 1920px;
-  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 0rem 1.25rem;
 }
 
+/* 전체 영역 */
 .detail-container {
-  width: 1168px;
-  margin: 0px 376px;
-  padding: 0px 20px;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 2.5rem;
 }
 
-/* detail-header */
+/* 헤더 영역 */
 .detail-header {
-  min-width: 320px;
-  max-width: 1168px;
-  height: 60px;
-  margin-bottom: 64px;
-  gap: 10px;
+  display: none;
 }
 
-.detail-header p {
-  padding: 20px;
-  height: 60px;
-  min-width: 320px;
-  max-width: 1168px;
+/* 모바일 헤더 */
+.mobile-header {
+  width: 100%;
+  height: 3.25rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.mobile-header svg {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.mobile-header p {
   color: #000;
   font-family: "Pretendard Variable";
-  font-size: 18px;
+  font-size: 1.125rem;
   font-style: normal;
   font-weight: 700;
-  line-height: 16px; /* 88.889% */
+  line-height: 3.25rem;
   letter-spacing: -0.18px;
 }
 
-/* detail main */
-.detail-main-container {
-  max-width: 1168px;
-  margin-bottom: 40px;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  gap: 24px;
-  align-items: flex-start;
-}
-
-.detail-content-top {
-  display: flex;
-  max-width: 1168px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 16px;
-  align-self: stretch;
-}
-
-.detail-content-title {
-  display: flex;
-  max-width: 1168px;
-  padding-bottom: 12px;
-  align-items: center;
-  gap: 10px;
-  align-self: stretch;
-  border-bottom: 2px solid #000;
-
-  color: #000;
-  font-family: "Pretendard Variable";
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 24px; /* 109.091% */
-  letter-spacing: -0.22px;
-}
-
-.detail-title {
-  display: flex;
-  max-width: 1168px;
-  justify-content: space-between;
-  align-items: center;
-  align-self: stretch;
-  text-align: center;
-}
-
-.detail-menu {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  text-align: center;
-}
-
-.detail-menu img {
-  width: 32px;
-  height: 32px;
-}
-
-.detail-menu-emotion {
-  margin-left: 8px;
-  color: #ea5757;
-  font-family: "Pretendard Variable";
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 24px;
-  letter-spacing: -0.2px;
-}
-
-.detail-info {
-  color: var(--Gray-Gray-500, #919191);
-  font-family: "Pretendard Variable";
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
-  letter-spacing: -0.14px;
-}
-
-.detail-info p:first-child {
-  margin-right: 8px;
-}
-
-.detail-content {
-  display: flex;
-  max-width: 1168px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 12px;
-  align-self: stretch;
-}
-
-.detail-content p:first-child {
-  color: #000;
-  font-family: "Pretendard Variable";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 20px; /* 125% */
-  letter-spacing: -0.16px;
-}
-
-.detail-content p:last-child {
-  color: var(--Gray-Gray-800, #333);
-  font-family: "Pretendard Variable";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 20px; /* 125% */
-  letter-spacing: -0.16px;
-}
-
+/* 버튼 부분 */
 .detail-btn {
   display: flex;
-  max-width: 1168px;
   justify-content: flex-end;
   align-items: center;
-  padding-bottom: 16px;
-  gap: 16px;
+  padding-bottom: 1rem;
+  gap: 1rem;
   align-self: stretch;
   border-bottom: 1px solid var(--Gray-B, #000);
 }
 
 .detail-btn button {
   display: flex;
-  padding: 8px 10px;
+  padding: 0.5rem 0.635rem;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  gap: 10px;
+  gap: 0.625rem;
 
-  border-radius: 8px;
+  border-radius: 0.5rem;
   border: 1px solid var(--Gray-Gray-200, #d4d3d3);
   background: var(--Gray-W, #fff);
 
   color: var(--Gray-Gray-900, #1c1c1c);
   font-family: "Pretendard Variable";
-  font-size: 18px;
+  font-size: 1.125rem;
   font-style: normal;
   font-weight: 500;
-  line-height: 24px; /* 133.333% */
-  letter-spacing: -0.18px;
+  line-height: 1.5rem;
+  letter-spacing: -0.011rem;
 }
 
 .detail-btn button:hover {
   background-color: var(--Gray-Gray-900, #d4d3d3);
+}
+
+/* 복사 부분 수정 */
+
+/* 일기 내용부분 */
+
+/* 회고 영역 */
+.diary-comment {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+  align-self: stretch;
+}
+
+.diary-comment-list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.875rem;
+  align-self: stretch;
+}
+
+.diary-comment-list p {
+  color: #000;
+  font-family: "Pretendard Variable";
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.125rem;
+  letter-spacing: -0.009rem;
+  align-self: stretch;
+}
+
+.diary-comment-input {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  align-self: stretch;
+}
+
+.diary-comment-input input {
+  display: flex;
+  padding: 0.5rem 1rem;
+  align-items: center;
+  gap: 0.625rem;
+  flex: 1 0 0;
+
+  border: none;
+  border-radius: 0.5rem;
+  background: var(--Gray-Gray-50, #f2f2f2);
+
+  color: var(--Gray-Gray-400, #ababab);
+  font-family: "Pretendard Variable";
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  letter-spacing: -0.009rem;
+}
+
+.diary-comment-input button {
+  display: flex;
+  height: 2.5rem;
+  padding: 0.5rem 0.625rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 0.625rem;
+
+  border: none;
+  border-radius: 0.5rem;
+  background: var(--Gray-Gray-300, #c7c7c7);
+
+  color: var(--Gray-Gray-50, #f2f2f2);
+  font-family: "Pretendard Variable";
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5rem;
+  letter-spacing: -0.01rem;
+}
+
+.comment-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 0.75rem;
+  align-self: stretch;
+
+  border-radius: 1rem;
+}
+
+.comment-element {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+  gap: 0.5rem 0.75rem;
+  align-self: stretch;
+  flex-wrap: wrap;
+}
+
+.comment-ele-text {
+  color: #000;
+  font-family: "Pretendard Variable";
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1rem;
+  letter-spacing: -0.14px;
+}
+
+.comment-ele-date {
+  color: var(--Gray-Gray-600, #777);
+  font-family: "Pretendard Variable";
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1rem;
+  letter-spacing: -0.008rem;
+}
+
+.comment-element hr {
+  width: 100%;
+  height: 1px;
+
+  background: var(--Gray-Gray-100, #e4e4e4);
+}
+
+/* --------------------------------------- */
+/* ----------- 797px midea tag ----------- */
+/* --------------------------------------- */
+@media (min-width: 797px) {
+  body {
+    display: flex;
+    justify-content: center;
+  }
+
+  .detail-container {
+    width: 75%;
+    align-items: flex-start;
+    gap: 4rem;
+  }
+
+  /* 헤더 영역 */
+  .mobile-header {
+    display: none;
+  }
+
+  .detail-header {
+    display: flex;
+    /* padding: 0px 1.25rem; */
+    gap: 0.625rem;
+    align-self: stretch;
+
+    height: 3.75rem;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .detail-header p {
+    display: flex;
+    height: 2.5rem;
+    align-items: center;
+    gap: 0.625rem;
+
+    color: #000;
+    font-family: "Pretendard Variable";
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1rem;
+    letter-spacing: -0.011rem;
+  }
+
+  .header-dark-menu {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  /* detail : 토스트 영역 */
+  .toast-message {
+    display: none;
+  }
+}
+
+/* ---------------------------------------- */
+/* ----------- 1208px midea tag ----------- */
+/* ---------------------------------------- */
+@media (min-width: 1208px) {
+  .detail-container {
+    width: 70%;
+  }
 }
