--- a/cna-homework/src/app/boards/new/styles.module.css
+++ b/cna-homework/src/app/boards/new/styles.module.css
@@ -294,17 +294,16 @@
   padding: 0.75rem 1rem;
   cursor: pointer;
 }
-.btnArea button:last-child {
-  width: 5.9375rem;
-  height: 3rem;
-  background-color: #c7c7c7;
+.unActiveBtn{
+  border-radius: 8px;
+  background: #2974e5;
+  display: flex;
+  height: 48px;
+  padding: 12px 16px;
+  align-items: center;
+  gap: 8px;
+  border: 0;
   color: #ffffff;
-  border-radius: 0.5rem;
-  border: none;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5rem;
-  padding: 0.75rem 1rem;
 }
 /* 알림메세지 스타일 */
 .errorMsg {
@@ -314,4 +313,15 @@
   line-height: 24px;
   /* background-color: #2974e5; */
   height: 30px;
+}
+.disabled {
+  border-radius: 8px;
+  display: flex;
+  height: 48px;
+  padding: 12px 16px;
+  align-items: center;
+  gap: 8px;
+  border: 0;
+  background-color: #c7c7c7;
+  color: #e4e4e4;
 }
