--- a/Next/nextproject/next-app/src/app/component/board-write/style.module.css
+++ b/Next/nextproject/next-app/src/app/component/board-write/style.module.css
@@ -15,8 +15,19 @@ body {
   padding: 40px 0px 40px 0px;
   left: 320px;
   gap: 40px;
+  
 }
 
+
+.disabled_input {
+  display: flex;
+  padding: 12px 16px;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: 1 0 0;
+  border-radius: 8px;
+  background: var(--gray-50, #f2f2f2);
+}
 /* 헤더 */
 .css_header {
   height: 28px;
@@ -300,4 +311,27 @@ body {
   font-weight: 500;
   line-height: 24px;
   margin-top: 5px;
+}
+
+.css_updatebutton {
+  border-radius: 8px;
+  background: #2974e5;
+  display: flex;
+  height: 48px;
+  padding: 12px 16px;
+  align-items: center;
+  gap: 8px;
+  border: 0;
+  color: #ffffff;
+}
+.disabled {
+  border-radius: 8px;
+  display: flex;
+  height: 48px;
+  padding: 12px 16px;
+  align-items: center;
+  gap: 8px;
+  border: 0;
+  background-color: #c7c7c7;
+  color: #e4e4e4;
 }
