--- a/homework/my-app/src/app/boards/[boardId]/styles.module.css
+++ b/homework/my-app/src/app/boards/[boardId]/styles.module.css
@@ -1,10 +1,4 @@
-/* * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-} */
-
-.containerWap {
+.containerWrap {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -73,7 +67,7 @@
   width: 100%;
 }
 
-.containerWap .sectionDiv:nth-child(3) {
+.containerWrap .sectionDiv:nth-child(3) {
   height: 512px;
   background-color: #f2f2f2;
   display: flex;
@@ -81,7 +75,7 @@
   align-items: center;
 }
 
-.containerWap .sectionDiv:nth-child(4) {
+.containerWrap .sectionDiv:nth-child(4) {
   height: 48px;
   display: flex;
   justify-content: center;
@@ -97,7 +91,7 @@
   gap: 3px;
 }
 
-.containerWap .sectionDiv:nth-child(5) {
+.containerWrap .sectionDiv:nth-child(5) {
   height: 40px;
   display: flex;
   justify-content: center;
@@ -106,7 +100,7 @@
   margin-bottom: 40px;
 }
 
-.containerWap .sectionDiv:nth-child(5) button {
+.containerWrap .sectionDiv:nth-child(5) button {
   height: 100%;
   border: 1px solid #000000;
   border-radius: 8px;
