--- a/homework/my-app/src/app/globals.css
+++ b/homework/my-app/src/app/globals.css
@@ -18,6 +18,9 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 @layer utilities {
