--- a/02-main_camp/Day27/src/app/globals.css
+++ b/02-main_camp/Day27/src/app/globals.css
@@ -2,10 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-
+* {
+  font-family: "Pretendard";
 }
-
 
 body {
   width: 100vw;
@@ -15,4 +14,34 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-weight: 700;
+  src: url("./fonts/Pretendard-ExtraBold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-weight: 600;
+  src: url("./fonts/Pretendard-ExtraLight.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-weight: 500;
+  src: url("./fonts/Pretendard-Light.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-weight: 400;
+  src: url("./fonts/Pretendard-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-weight: 300;
+  src: url("./fonts/Pretendard-Regular.woff") format("woff");
 }
