--- a/trip-talk/src/app/global.css
+++ b/trip-talk/src/app/global.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-main {
-  max-width: 1280px;
-  width: 100%;
-  margin: 0 auto;
+.swiper-pagination-bullet {
+  background-color: #ffffffcc !important; /* 비활성화된 상태 */
+  opacity: 1; /* 투명도 조절 */
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #ffffff !important; /* 활성화된 상태 */
 }
