--- a/react-homework/day27/src/components/board-detail/comment-list/styles.module.css
+++ b/react-homework/day27/src/components/board-detail/comment-list/styles.module.css
@@ -1,6 +1,55 @@
 .comment_box {
   display: flex;
   flex-direction: column;
-  padding: 40pox 0;
-  border-bottom: solid 1px black;
+  gap: 8px;
+  padding: 40px 0;
+  border-bottom: solid 1px #e4e4e4;
+}
+
+.comment_header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.comment_box:last-child {
+  border-bottom: none;
+}
+
+.user_info {
+  display: flex;
+  gap: 8px;
+  color: var(--gray-700, #5f5f5f);
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.user_info > :first-child {
+  display: flex;
+  gap: 4px;
+}
+
+.btn_box {
+  display: flex;
+  gap: 8px;
+}
+
+.contents_box {
+  color: #333;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.date_box {
+  color: #818181;
+  font-size: 14px;
+
+  font-weight: 400;
+}
+
+.no_comments {
+  color: #777;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  margin-top: 40px;
 }
