--- a/02-main_camp/Day28/src/app/components/boards/Boards-write/styles.module.css
+++ b/02-main_camp/Day28/src/app/components/boards/Boards-write/styles.module.css
@@ -1,143 +1,80 @@
-  .BoardsNew_rootContainer {
-    width: 80rem;
-    display: flex;
-    flex-direction: column;
-    gap: 2.5rem;
-  }
-  
-  .BoardsNew_header {
-    width: 100%;
-    color: black;
-    font-weight: 700;
-    font-size: 20px;
-  }
-  
-  .BoardsNew_main {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 2.5rem;
-  }
-  
-  .BoardsNew_UserInputForm {
-    display: flex;
-    gap: 2.5rem;
-  }
-  
-  .BoardsNew_inputForm {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-  }
-  
-  .inputTitle {
-    display: flex;
-    gap: .5rem;
-  
-    color: #333333;
-    font-weight: 500;
-    font-size: 1rem;
-  }
-  
-  .requiredMark {
-    color: #F66A6A;
-    font-weight: 500;
-    font-size: 1rem;
-  }
-  
-  .inputText {
-    height: 3rem;
-    border-radius: .5rem;
-    border: .0625rem solid #D4D3D3;
-    padding: .75rem 1rem .75rem 1rem;
-  }
-  
-  .inputError {
-      color: #F66A6A;
-      font-weight: 500;
-      font-size: 1rem;
-  }
-  
-  .inputTextArea {
-    height: 21rem;
-    border-radius: .5rem;
-    border: .0625rem solid #D4D3D3;
-    padding: .75rem 1rem .75rem 1rem;
-  }
-  
-  .divider {
-    border: .0625rem solid #E4E4E4;
-  }
-  
-  .ZipCodeContainer {
-    display: flex;
-    gap: .5rem;
-  }
-  
-  .zipCodeSearchButton {
-    width: 8.125rem;
-    height: 3rem;
-    background-color: #FFFFFF;
-    color: black;
-    font-weight: 600;
-    font-size: 1.125rem;
-    border-radius: .5rem;
-    border: .0625rem solid black;
-  }
-  
-  .uploadButtonContainer {
-    display: flex;
-    gap: 1rem;
-  }
-  
-  .uploadImageContainer {
-    position: relative;
-  }
-  
-  #uploadImage {
-    display: none;
-  }
-  
-  #uploadLabel {
-    width: 10rem;
-    aspect-ratio: 1 / 1;
-    background-color: #F2F2F2;
-    color: #777777;
-    font-weight: 400;
-    font-size: 1rem;
-    border-radius: .5rem;
-    border: none;
-  
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: .5rem;
-  }
-  
-  .BoardsNew_footer {
-    display: flex;
-    justify-content: flex-end;
-    gap: 1rem;
-  }
-  
-  .cancelButton {
-    width: 4rem;
-    height: 3rem;
-    background-color: #F2F2F2;
-    color: black;
-    font-weight: 600;
-    font-size: 1.125rem;
-    border-radius: .5rem;
-    border: .0625rem solid black;
-  }
-  
-  .submitButton {
-    width: 5.9375rem;
-    height: 3rem;
-    font-weight: 600;
-    font-size: 1.125rem;
-    border-radius: .5rem;
-    border: none;
-  }
+.rootContainer {
+  width: 80rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+}
+
+.headerContainer {
+  width: 100%;
+  color: black;
+  font-weight: 700;
+  font-size: 20px;
+}
+
+.mainContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.userInputForm {
+  display: flex;
+  gap: 2.5rem;
+}
+
+.uploadButtonContainer {
+  display: flex;
+  gap: 1rem;
+}
+
+.uploadImageContainer {
+  position: relative;
+}
+
+#uploadImage {
+  display: none;
+}
+
+#uploadLabel {
+  width: 10rem;
+  aspect-ratio: 1 / 1;
+  background-color: #f2f2f2;
+  color: #777777;
+  font-weight: 400;
+  font-size: 1rem;
+  border-radius: 0.5rem;
+  border: none;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.footerContainer {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+
+.cancelButton {
+  width: 4rem;
+  height: 3rem;
+  background-color: #f2f2f2;
+  color: black;
+  font-weight: 600;
+  font-size: 1.125rem;
+  border-radius: 0.5rem;
+  border: 0.0625rem solid black;
+}
+
+.submitButton {
+  width: 5.9375rem;
+  height: 3rem;
+  font-weight: 600;
+  font-size: 1.125rem;
+  border-radius: 0.5rem;
+  border: none;
+}
