--- a/src/app/signup/styles.module.css
+++ b/src/app/signup/styles.module.css
@@ -28,8 +28,16 @@
     margin-bottom: 16px;
 }
 
-.loginBox > input {
+.inputTitle {
     display: flex;
+    gap: 6px;
+}
+
+.star {
+    color: red;
+}
+
+.inputBox > input {
     width: 320px;
     height: 80px;
     padding: 8px 16px;
@@ -41,7 +49,7 @@
     background: var(--Gray-W, #fff);
 }
 
-.loginBox > input:focus {
+.inputBox > input:focus {
     border-color: orange;
     outline: none;
 }
@@ -53,12 +61,6 @@
     color: #fff;
     border-radius: 8px;
     margin-bottom: 24px;
-    transition: 0.5s;
-}
-
-.loginBtn:hover {
-    color: orange;
-    background-color: #fff;
 }
 
 .signBtn {
