--- a/next_과제/src/app/globals.css
+++ b/next_과제/src/app/globals.css
@@ -7,7 +7,7 @@
 @layer base {
   :root {
     --font-base-size: 1rem;
-    --font-base-family: "Noto Sans KR", "Roboto", -apple-system,
+    --font-base-family: var(--noto-sans-kr), var(--roboto), -apple-system,
       BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
       "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 
