--- a/src/commons/layout/navigation/styles.module.css
+++ b/src/commons/layout/navigation/styles.module.css
@@ -11,11 +11,16 @@
 .homeHeaderLeft {
     display: flex;
     flex-direction: row;
-    gap: 16px;
+    gap: 26px;
 }
 
 .homeHeaderLeftTitle {
     cursor: pointer;
+    font-size: 20px;
+    font-weight: 600;
+}
+.active {
+    border-bottom: 3px solid #000;
 }
 
 .homeLogoutButtonBox {
