--- a/02-main_camp/Day48/src/commons/layout/navigation/styles.module.css
+++ b/02-main_camp/Day48/src/commons/layout/navigation/styles.module.css
@@ -1,5 +1,17 @@
+.navigationContainer__wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+
+  position: sticky;
+  top: 0;
+  z-index: 99;
+
+  background-color: white;
+}
 .navigationContainer {
-  width: 1280px;
+  width: 100%;
+  max-width: 80rem;
   display: flex;
   justify-content: space-between;
   padding-top: 1.25rem;
