--- a/hybrid/web/src/app/globals.css
+++ b/hybrid/web/src/app/globals.css
@@ -2,26 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+html {
+    /* 피그마기본가로(360px) : HTML기본폰트(16px) = 내기계사이즈(100vw) : 조정폰트 */
+    font-size: calc((40 / 9) * 1vw);
 }
