--- a/hybrid/web/src/app/soloplace-logs/new/styles.module.css
+++ b/hybrid/web/src/app/soloplace-logs/new/styles.module.css
@@ -5,7 +5,7 @@
 .container {
     width: 100vw;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0 1.25rem;
 }
 
 .layout {
@@ -15,9 +15,9 @@
 
 .titleBox {
     width: 100%;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 700;
-    padding: 12px 0;
+    padding: 0.75rem 0;
 }
 
 .imageBox {
@@ -28,8 +28,8 @@
 }
 
 .imageBoxLeft {
-    width: 100px;
-    height: 100px;
+    width: 6.25rem;
+    height: 6.25rem;
     flex-shrink: 0;
 }
 
@@ -38,8 +38,8 @@
     display: flex;
     flex-wrap: nowrap; /* 이미지가 한 줄로 나열되도록 설정 */
 
-    border: 1px solid #ccc;
-    border-radius: 8px; /* 모서리 둥글게 (선택 사항) */
+    border: 0.0625rem solid #ccc;
+    border-radius: 0.5rem; /* 모서리 둥글게 (선택 사항) */
 }
 
 .mapImageBox {
@@ -55,8 +55,8 @@
     position: absolute;
     width: 1.25rem;
     height: 1.25rem;
-    top: 10px;
-    right: 12px;
+    top: 0.625rem;
+    right: 0.75rem;
     color: white;
     border: none;
     border-radius: 6.25rem;
@@ -67,7 +67,7 @@
 }
 
 .placeNameBox {
-    padding: 20px 0;
+    padding: 1.25rem 0;
 }
 .placeNameBoxTitle {
     display: flex;
@@ -75,42 +75,42 @@
 
 .placeNameBox input {
     width: 100%;
-    border: 1px solid #d4d3d3;
-    border-radius: 8px;
-    height: 44px;
-    padding: 12px 16px;
+    border: 0.0625rem solid #d4d3d3;
+    border-radius: 0.5rem;
+    height: 2.75rem;
+    padding: 0.75rem 1rem;
 }
 
 .placeAddressBox {
-    padding: 0 0 20px 0;
+    padding: 0 0 1.25rem 0;
 }
 
 .placeAddressBox button {
     width: 100%;
     border: 1px solid #000;
-    border-radius: 8px;
-    height: 44px;
-    padding: 12px 16px;
+    border-radius: 0.5rem;
+    height: 2.75rem;
+    padding: 0.75rem 1rem;
     text-align: start;
     display: flex;
     justify-content: space-between;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 700;
 }
 
 .textarea {
     width: 100%;
-    height: 200px;
+    height: 12.5rem;
     border: 1px solid #d4d3d3;
-    border-radius: 8px;
-    padding: 12px 16px;
-    margin-bottom: 40px;
+    border-radius: 0.5rem;
+    padding: 0.75rem 1rem;
+    margin-bottom: 2.5rem;
 }
 
 .logBtnBox {
     text-align: center;
     color: #e4e4e4;
     background-color: #d4d3d3;
-    border-radius: 8px;
-    padding: 12px 16px;
+    border-radius: 0.5rem;
+    padding: 0.75rem 1rem;
 }
