--- a/05-hybrid-app/web/src/app/globals.css
+++ b/05-hybrid-app/web/src/app/globals.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+body {
+  box-sizing: content-box;
+  margin: 0;
+  padding: 0;
 }
