--- a/03-native-expo/homework/web/src/app/globals.css
+++ b/03-native-expo/homework/web/src/app/globals.css
@@ -1,12 +1,31 @@
 @layer reset, base, tokens, recipes, utilities;
 
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
+@layer reset {
+    html {
+        font-size: 10px;
+        font-family: var(--font-pre-var);
+    }
 
-a {
-    color: inherit;
-    text-decoration: none;
+    * {
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0;
+        font-size: 16px;
+    }
+
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
+
+    b {
+        color: #f55;
+        display: contents;
+    }
 }
