--- a/hybrid-homework/web/src/components/solplace-logs/styles.module.css
+++ b/hybrid-homework/web/src/components/solplace-logs/styles.module.css
@@ -5,25 +5,59 @@
   padding: 1.5rem 1.25rem 1.25rem 1.25rem;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+}
+
 .card {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 8px;
+  gap: 0.5rem;
+  overflow: hidden;
+  width: 100%;
 }
 
 .image {
-  width: 152px;
-  height: 200px;
+  width: 100%;
+  aspect-ratio: 3 / 4;
+  object-fit: cover;
   flex-shrink: 0;
-  border-radius: 8px;
+  border-radius: 0.5rem;
+}
+
+.contents {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .title {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  gap: 8px;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  color: var(--gray-900, #1c1c1c);
+  text-overflow: ellipsis;
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.description {
+  width: 100%;
+  overflow: hidden;
+  color: var(--Gray-700, #5f5f5f);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 0.875rem;
 }
 
 .address {
@@ -31,13 +65,33 @@
   align-items: center;
 }
 
-.address > div {
+.addressTitle {
   color: var(--Gray-600, #777);
-  font-size: 13px;
+  font-size: 0.8125rem;
   font-weight: 600;
 }
 
 .icon16 {
-  width: 16px;
-  height: 16px;
+  width: 1rem;
+  height: 1rem;
+}
+
+.floatingButton {
+  position: fixed;
+  right: 1.25rem;
+  bottom: 1.5rem;
+  display: flex;
+  width: 3rem;
+  height: 3rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 6.25rem;
+  background: var(--Primary-main, #2974e5);
+}
+
+.add {
+  width: 2.25rem;
+  height: 2.25rem;
 }
