--- a/03-hybrid/project/web/src/commons/layout/header/styles.module.css
+++ b/03-hybrid/project/web/src/commons/layout/header/styles.module.css
@@ -1,7 +1,7 @@
 .header {
   width: 100vw;
   height: 3rem;
-  padding: 1.5rem 1.25rem 0 1.25rem;
+  padding: 0.75rem 1.25rem;
 
   display: flex;
   align-items: center;
