--- a/03-hybrid/project/web/src/app/solplace-logs/styles.module.css
+++ b/03-hybrid/project/web/src/app/solplace-logs/styles.module.css
@@ -1,12 +1,12 @@
 .solplaceLogs__container {
+  width: 100%;
+  height: 80vh;
   position: relative;
-  padding: 1.5rem 1.25rem 0.5rem 1.25rem;
 }
 
 .empty {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .empty p {
