--- a/hybrid-homework/web/src/components/domains/solplace-logs-detail-edit/styles.module.css
+++ b/hybrid-homework/web/src/components/domains/solplace-logs-detail-edit/styles.module.css
@@ -1,7 +1,8 @@
 .container {
   display: flex;
   width: 100%;
-  padding: 1.25rem 1.25rem 2.5rem 1.25rem;
+  height: calc(100vh - 3rem);
+  padding: 1.25rem;
 }
 
 .register {
