--- a/hybrid-homework/web/src/commons/layout/header/styles.module.css
+++ b/hybrid-homework/web/src/commons/layout/header/styles.module.css
@@ -6,7 +6,7 @@
   height: 3rem;
   align-items: center;
   gap: 0.5rem;
-  z-index: 100;
+  z-index: 1100;
 }
 
 .title {
@@ -17,6 +17,11 @@
   font-style: normal;
   font-weight: 700;
   line-height: 1.5rem; /* 133.333% */
+}
+
+.exit {
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 .back {
